fix non-relative path to file

--- a/mt19937ar/CMakeLists.txt
+++ b/mt19937ar/CMakeLists.txt
@@ -22,4 +22,4 @@ target_link_libraries(mt19937ar_reference_1_c mt19937ar)
 add_test(NAME mt19937ar_reference_output
 COMMAND ${CMAKE_COMMAND} -Dprog=$<TARGET_FILE:mt19937ar_original_test>
 -Dtestfile=${CMAKE_BINARY_DIR}/mt19937ar.test -Dreffile=${CMAKE_CURRENT_SOURCE_DIR}/mt19937ar.out
--P ${CMAKE_SOURCE_DIR}/cmake/datafile_test.cmake)
+-P ${CMAKE_CURRENT_SOURCE_DIR}/../cmake/datafile_test.cmake)
