--- a/threefry/CMakeLists.txt
+++ b/threefry/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required (VERSION 2.6)
 project(rm_threefry C Fortran)
 
 add_library(threefry threefry.c)
+set_property(TARGET threefry PROPERTY C_STANDARD 99)
 
 set(CMAKE_Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR}/modules)
 include_directories(${CMAKE_Fortran_MODULE_DIRECTORY})
@@ -12,9 +13,11 @@ target_link_libraries(threefry_module threefry)
 
 add_executable(threefry_simple_example simple_example.c)
 target_link_libraries(threefry_simple_example threefry)
+set_property(TARGET threefry_simple_example PROPERTY C_STANDARD 99)
 
 add_executable(threefry_int_double int_double.c)
 target_link_libraries(threefry_int_double threefry)
+set_property(TARGET threefry_int_double PROPERTY C_STANDARD 99)
 
 add_executable(threefry_double_f90 int_double.f90)
 target_link_libraries(threefry_double_f90 threefry_module)
